# opengl_renderer

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  light.frag  light.vert  log.txt  shader.frag  shader.vert  sky.frag  sky.vert
glad/: CMakeLists.txt  cmake_install.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
include/: camera.h  mesh.h  shader.h  world.h
minecreaft_world/: Mworld1.mtl
src/: main.cpp  mesh.cpp  shader.cpp  world.cpp
